challenge-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-python-server-service
spec:
  selector:
    app: my-python-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
